service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend-service
  namespace: pfe
spec:
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: frontend
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend-service
  namespace: pfe
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: backend
  type: NodePort
