ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-nginx-ingress-controller
  namespace: pfe
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - yourimaginaryfriend.local
    secretName: certificat-tls
  rules:
  - host: yourimaginaryfriend.local
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: frontend-service
            port:
              number: 5000
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: backend-service
            port:
              number: 3000
      - pathType: Exact
        backend:
          service:
            name: el-github-listener
            port:
              number: 8080
